--- a/contact/index.html
+++ b/contact/index.html
@@ -45,13 +45,38 @@
             <h2>Write to the Royal Scribery</h2>
             <form>
                 <label for="name">Thy Name:</label><br>
-                <input type="text" id="name" name="name"><br><br>
+                <input type="text" id="name" name="name" required><br><br>
 
                 <label for="email">Scroll Address (email):</label><br>
-                <input type="email" id="email" name="email"><br><br>
+                <input type="email" id="email" name="email" required><br><br>
 
+                <!-- Text box -->
                 <label for="message">Thy Message:</label><br>
                 <textarea id="message" name="message" rows="6" cols="40"></textarea><br><br>
+
+                <!-- Radio buttons -->
+                <fieldset>
+                    <legend>Who art thou?</legend>
+
+                    <input type="radio" id="noble" name="identity" value="noble">
+                    <label for="noble">A noble of the realm</label><br>
+
+                    <input type="radio" id="peasant" name="identity" value="peasant">
+                    <label for="peasant">A humble peasant</label><br>
+
+                    <input type="radio" id="wizard" name="identity" value="wizard">
+                    <label for="wizard">A wizard (level 3+ only)</label><br>
+
+                    <input type="radio" id="bard" name="identity" value="bard">
+                    <label for="bard">A bard in search of tales</label><br>
+
+                    <input type="radio" id="dragon" name="identity" value="dragon">
+                    <label for="dragon">A dragon (no judgment)</label>
+                </fieldset><br>
+
+                <!-- Date Picker --> 
+                <label for="date">When shall thy raven depart?</label><br>
+                <input type="date" id="date" name="date"><br><br>
 
                 <input type="submit" value="Send Raven">
             </form>
