--- a/about/index.html
+++ b/about/index.html
@@ -68,7 +68,29 @@
                 <br>– Lord Butterhelm of Eastbridge
             </blockquote>
         </section>
-    </main>
+    </main><hr><br>
+    
+    <!-- Form section --> 
+    <section>
+        <h2>Join Our Order</h2>
+        <form>
+            <label for="name">Thy Full Name:</label><br>
+            <input type="text" id="name" name="name" required><br><br>
+
+            <label for="email">Scroll Address (email):</label><br>
+            <input type="email" id="email" name="email" required><br><br>
+
+            <!-- Dropdown select -->
+            <label for="skill">Choose thy skill:</label><br>
+            <select id="skill" name="skill">
+                <option>Potion Reviewer</option>
+                <option>Witch Watcher</option>
+                <option>Royal Beard Analyst</option>
+            </select><br><br>
+
+            <input type="submit" value="Pledge Thy Quill">
+        </form>
+    </section>
 
     <!-- Page footer -->
     <footer>
