--- a/about/index.html
+++ b/about/index.html
@@ -68,7 +68,7 @@
                 <br>– Lord Butterhelm of Eastbridge
             </blockquote>
         </section>
-    </main><hr><br>
+    </main><hr>
     
     <!-- Form section --> 
     <section>
@@ -90,7 +90,7 @@
 
             <input type="submit" value="Pledge Thy Quill">
         </form>
-    </section>
+    </section><br>
 
     <!-- Page footer -->
     <footer>
