add lazy loading

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <article id="story1">
                 <h3>Dragon Spotted Near West Forest</h3>
                 <figure>
-                    <img src="assets/images/dragon.png" alt="Dragon in the sky" width="300">
+                    <img src="assets/images/dragon.png" alt="Dragon in the sky" width="300" loading="lazy">
                     <figcaption>Artist's sketch of the flying menace near West Forest.</figcaption>
                 </figure>
                 <details>
@@ -72,7 +72,7 @@
             <article id="story2">
                 <h3>Royal Jousting Tournament Begins</h3>
                 <figure>
-                    <img src="assets/images/joust.png" alt="Jousting event" width="300">
+                    <img src="assets/images/joust.png" alt="Jousting event" width="300" loading="lazy">
                     <figcaption>Sir Gallahad unhorses Sir Roderick in Round II.</figcaption>
                 </figure>
                 <details>
@@ -90,7 +90,7 @@
             <article id="story3">
                 <h3>Wizard Council Debates Spell Reform</h3>
                 <figure>
-                    <img src="assets/images/wizard.png" alt="Wizard council" width="300">
+                    <img src="assets/images/wizard.png" alt="Wizard council" width="300" loading="lazy">
                     <figcaption>The Great Hall hosts the annual Wizard Council.</figcaption>
                 </figure>
                 <details>
