--- a/index.html
+++ b/index.html
@@ -3,157 +3,182 @@
 <head>
     <meta charset="UTF-8">
     <title>Medieval Times Daily</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <div class="site-wrapper">
 
-    <!-- Scrolling news banner displaying important updates -->
-    <marquee behavior="scroll" direction="left" scrollamount="3">
-        ⚔️ DRAGON WARNING IN EFFECT ⚔️ West Forest closed by royal decree! ⸺
-        🪙 Grain Prices Up: 2 sacks per gold! ⸺
-        🍗 Chicken Futures Slump After Jousting Scandal! ⸺
-        🧙 Wizard Guild Demands Pay in Rare Herbs! ⸺
-        🍺 Mead Stock Soars After Royal Wedding! ⸺
-        🐐 Goatcoin Crashes 30% After Shepherd Uprising!
-    </marquee>
+        <!-- Scrolling Alert -->
+        <div class="ticker-wrapper">
+          <div class="ticker">
+            <div class="ticker__content">
+              ⚔️ DRAGON WARNING IN EFFECT ⚔️ West Forest closed by royal decree! ⸺ 
+              🪙 Grain Prices Up: 2 sacks per gold! ⸺ 
+              🍗 Chicken Futures Slump After Jousting Scandal! ⸺ 
+              🧙 Wizard Guild Demands Pay in Rare Herbs! ⸺ 
+              🍺 Mead Stock Soars After Royal Wedding! ⸺ 
+              🐐 Goatcoin Crashes 30% After Shepherd Uprising!
+            </div>
+          </div>
+        </div>
 
-    <!-- Page header including logo, tagline, and navigation menu -->
-    <header>
-        <a href="index.html">
-            <img src="assets/images/logo.png" alt="Medieval Times Daily Logo" width="250">
-        </a>
-        <p><em>"Truth, Gossip, and Dragon Sightings Since 1066"</em></p>
+        <!-- Header -->
+        <header class="site-header">
+            <div class="site-header__top">
+                <div class="site-header__logo">
+                    <a href="index.html">
+                        <img src="assets/images/logo.png" alt="Medieval Times Daily Logo">
+                    </a>
+                </div>
+                <div class="site-header__tagline">
+                    <p><em>"Truth, Gossip, and Dragon Sightings Since 1066"</em></p>
+                </div>
+                <div class="site-header__nav">
+                    <nav>
+                        <p>
+                            <a href="index.html" class="active">Home</a> |
+                            <a href="about/index.html">About the Scribes</a> |
+                            <a href="contact/index.html">Send a Raven</a>
+                        </p>
+                    </nav>
+                </div>
+            </div>
+            <hr>
+        </header>
 
-        <!-- Navigation links -->
-        <nav>
-            <p>
-                <a href="index.html">Home</a> |
-                <a href="about/index.html">About the Scribes</a> |
-                <a href="contact/index.html">Send a Raven</a>
-            </p>
-        </nav>
-        <hr>
-    </header>
+        <!-- Main Content -->
+        <main class="site-main">
 
-    <!-- Main content section -->
-    <main>
+            <!-- News Section -->
+            <div class="section-box news-section">
+                <h2 class="section-box__title">Breaking News Scrolls</h2>
 
-        <!-- Featured news stories with image and expandable content -->
-        <section>
-            <h2>Breaking News Scrolls</h2>
+                <div class="news-section__nav">
+                    <nav>
+                        <p>View: 
+                            <a href="#story1">1</a> |
+                            <a href="#story2">2</a> |
+                            <a href="#story3">3</a>
+                        </p>
+                    </nav>
+                </div>
 
-            <!-- Internal navigation to jump between featured articles -->
-            <nav>
-                <p>View: 
-                    <a href="#story1">1</a> |
-                    <a href="#story2">2</a> |
-                    <a href="#story3">3</a>
-                </p>
-            </nav>
+                <div class="news-section__articles">
 
-            <!-- News article 1 -->
-            <article id="story1">
-                <h3>Dragon Spotted Near West Forest</h3>
-                <figure>
-                    <img src="assets/images/dragon.png" alt="Dragon in the sky" width="300" loading="lazy">
-                    <figcaption>Artist's sketch of the flying menace near West Forest.</figcaption>
-                </figure>
-                <details>
-                    <summary>Read the full scroll</summary>
-                    <p>
-                        Panic spread among villagers after a massive creature was seen soaring above the trees. 
-                        The Royal Knights have been summoned. Farmers report scorched turnips.
-                    </p>
-                </details>
-            </article>
+                    <div class="news-article" id="story1">
+                        <h3 class="news-article__title">Dragon Spotted Near West Forest</h3>
+                        <figure class="news-article__figure">
+                            <img src="assets/images/dragon.png" alt="Dragon in the sky" loading="lazy" class="news-article__image">
+                            <figcaption>Artist's sketch of the flying menace near West Forest.</figcaption>
+                        </figure>
+                        <details class="news-article__details">
+                            <summary>Read the full scroll</summary>
+                            <p>
+                                Panic spread among villagers after a massive creature was seen soaring above the trees. 
+                                The Royal Knights have been summoned. Farmers report scorched turnips.
+                            </p>
+                        </details>
+                    </div>
+
+                    <hr>
+
+                    <div class="news-article" id="story2">
+                        <h3 class="news-article__title">Royal Jousting Tournament Begins</h3>
+                        <figure class="news-article__figure">
+                            <img src="assets/images/joust.png" alt="Jousting event" loading="lazy" class="news-article__image">
+                            <figcaption>Sir Gallahad unhorses Sir Roderick in Round II.</figcaption>
+                        </figure>
+                        <details class="news-article__details">
+                            <summary>Read the full scroll</summary>
+                            <p>
+                                The annual tournament is underway with over 40 knights competing for glory and golden goblets. 
+                                Spectators are advised to bring shields.
+                            </p>
+                        </details>
+                    </div>
+
+                    <hr>
+
+                    <div class="news-article" id="story3">
+                        <h3 class="news-article__title">Wizard Council Debates Spell Reform</h3>
+                        <figure class="news-article__figure">
+                            <img src="assets/images/wizard.png" alt="Wizard council" loading="lazy" class="news-article__image">
+                            <figcaption>The Great Hall hosts the annual Wizard Council.</figcaption>
+                        </figure>
+                        <details class="news-article__details">
+                            <summary>Read the full scroll</summary>
+                            <p>
+                                A heated argument broke out over fireball regulations. One wizard turned into a frog. 
+                                More updates to follow as we decipher the croaks.
+                            </p>
+                        </details>
+                    </div>
+
+                </div>
+            </div>
 
             <hr>
 
-            <!-- News article 2 -->
-            <article id="story2">
-                <h3>Royal Jousting Tournament Begins</h3>
-                <figure>
-                    <img src="assets/images/joust.png" alt="Jousting event" width="300" loading="lazy">
-                    <figcaption>Sir Gallahad unhorses Sir Roderick in Round II.</figcaption>
-                </figure>
-                <details>
-                    <summary>Read the full scroll</summary>
-                    <p>
-                        The annual tournament is underway with over 40 knights competing for glory and golden goblets. 
-                        Spectators are advised to bring shields.
-                    </p>
-                </details>
-            </article>
+            <!-- Events Table -->
+            <div class="section-box events-section">
+                <h2 class="section-box__title">Upcoming Royal Events</h2>
+                <div class="events-section__table">
+                    <table border="1">
+                        <thead>
+                            <tr>
+                                <th>Date</th>
+                                <th>Event</th>
+                                <th>Location</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>May 25</td>
+                                <td>Annual Jousting Tournament</td>
+                                <td>Castle Grounds</td>
+                            </tr>
+                            <tr>
+                                <td>May 28</td>
+                                <td>Wizard Council Assembly</td>
+                                <td>Great Hall of Wisdom</td>
+                            </tr>
+                            <tr>
+                                <td>June 1</td>
+                                <td>Peasant Appreciation Day</td>
+                                <td>Village Square</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
 
             <hr>
 
-            <!-- News article 3 -->
-            <article id="story3">
-                <h3>Wizard Council Debates Spell Reform</h3>
-                <figure>
-                    <img src="assets/images/wizard.png" alt="Wizard council" width="300" loading="lazy">
-                    <figcaption>The Great Hall hosts the annual Wizard Council.</figcaption>
-                </figure>
-                <details>
-                    <summary>Read the full scroll</summary>
-                    <p>
-                        A heated argument broke out over fireball regulations. One wizard turned into a frog. 
-                        More updates to follow as we decipher the croaks.
-                    </p>
-                </details>
-            </article>
-        </section>
+            <!-- Quote Section -->
+            <div class="section-box quote-section">
+                <h2 class="section-box__title">Quote of the Day</h2>
+                <blockquote class="quote-section__quote">
+                    "He who hath buttered bread shall not fear the flames."  
+                    <br>– Ancient Proverb
+                </blockquote>
+            </div>
+        </main>
 
-        <hr>
+        <!-- Footer -->
+        <footer class="site-footer">
+            <hr>
+            <p>© 1425 Medieval Times Daily | All scrolls reserved.</p>
+            <input type="checkbox" id="fake-darkmode-toggle" hidden>
+            <label for="fake-darkmode-toggle" class="darkmode-button">🌘</label>
 
-        <!-- Table of upcoming events -->
-        <section>
-            <h2>Upcoming Royal Events</h2>
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>Event</th>
-                        <th>Location</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>May 25</td>
-                        <td>Annual Jousting Tournament</td>
-                        <td>Castle Grounds</td>
-                    </tr>
-                    <tr>
-                        <td>May 28</td>
-                        <td>Wizard Council Assembly</td>
-                        <td>Great Hall of Wisdom</td>
-                    </tr>
-                    <tr>
-                        <td>June 1</td>
-                        <td>Peasant Appreciation Day</td>
-                        <td>Village Square</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
+            <div class="darkmode-overlay">
+              <div class="darkmode-message">
+                <p>There’s no electricity in 1425, peasant.</p>
+                <label for="fake-darkmode-toggle" class="darkmode-exit">🔆 Return to the light</label>
+              </div>
+            </div>
+        </footer>
 
-        <br>
-        <hr>
-
-        <!-- Quotation section -->
-        <section>
-            <h2>Quote of the Day</h2>
-            <blockquote>
-                "He who hath buttered bread shall not fear the flames."  
-                <br>– Ancient Proverb
-            </blockquote>
-        </section>
-    </main>
-
-    <!-- Footer with "copyright" -->
-    <footer>
-        <hr>
-        <p>© 1425 Medieval Times Daily | All scrolls reserved.</p>
-    </footer>
-
+    </div> <!-- /site-wrapper -->
 </body>
 </html>
